2004-12-06  John Sullivan  <john@wjsullivan.net>

	* delicious.el: Broke posting input out into separate functions,
	`delicious-read-time-string', `delicious-read-url',
	`delicious-read-description',
	`delicious-read-extended-description' to facilitate future
	improvements. Added tip to delicious-read-time-string prompt to
	explain how the argument should be formatted.
	
	
	
