@@ -1,3 +1,9 @@
+2004-12-07  John Sullivan  <john@wjsullivan.net>
+
+	* delicious.el (delicious-guess-description): Use `major-mode' to
+	help guess appropriate description.
+	(delicious-guess-url): Use 'major-mode' to help guess appropriate url.
+	
 2004-12-06  John Sullivan  <john@wjsullivan.net>
 
 	* delicious.el: Broke posting input out into separate functions,
